--- a/ExerciseXData/Views/Diet/Delete.cshtml
+++ b/ExerciseXData/Views/Diet/Delete.cshtml
@@ -11,50 +11,50 @@
 
         <div asp-validation-summary="All"></div> @*Displays all the validation texts*@
         <div class="mb-3">
-            <label asp-for="Name"></label>
-            <input asp-for="Name" disabled class="form-control" />
+            <label asp-for="D_Name"></label>
+            <input asp-for="D_Name" disabled class="form-control" />
 
         </div>
 
         <div class="mb-3">
-            <label asp-for="Description"></label>
-            <input asp-for="Description" disabled class="form-control" />
+            <label asp-for="D_Description"></label>
+            <input asp-for="D_Description" disabled class="form-control" />
 
         </div>
 
         <div class="mb-3">
-            <label asp-for="Pros_1"></label>
-            <input asp-for="Pros_1" disabled class="form-control" />
+            <label asp-for="D_Pros_1"></label>
+            <input asp-for="D_Pros_1" disabled class="form-control" />
 
         </div>
 
         <div class="mb-3">
-            <label asp-for="Pros_2"></label>
-            <input asp-for="Pros_2" disabled class="form-control" />
+            <label asp-for="D_Pros_2"></label>
+            <input asp-for="D_Pros_2" disabled class="form-control" />
 
         </div>
 
         <div class="mb-3">
-            <label asp-for="Pros_3"></label>
-            <input asp-for="Pros_3" disabled class="form-control" />
+            <label asp-for="D_Pros_3"></label>
+            <input asp-for="D_Pros_3" disabled class="form-control" />
 
         </div>
 
         <div class="mb-3">
-            <label asp-for="Cons_1"></label>
-            <input asp-for="Cons_1" disabled class="form-control" />
+            <label asp-for="D_Cons_1"></label>
+            <input asp-for="D_Cons_1" disabled class="form-control" />
 
         </div>
 
         <div class="mb-3">
-            <label asp-for="Cons_2"></label>
-            <input asp-for="Cons_2" disabled class="form-control" />
+            <label asp-for="D_Cons_2"></label>
+            <input asp-for="D_Cons_2" disabled class="form-control" />
 
         </div>
 
         <div class="mb-3">
-            <label asp-for="Cons_3"></label>
-            <input asp-for="Cons_3" disabled class="form-control" />
+            <label asp-for="D_Cons_3"></label>
+            <input asp-for="D_Cons_3" disabled class="form-control" />
 
         </div>
         <button type="submit" class="btn btn-danger" style="width:150px">Delete</button>
