--- a/ExerciseXData/Views/Diet/Details.cshtml
+++ b/ExerciseXData/Views/Diet/Details.cshtml
@@ -1,10 +1,9 @@
 ﻿@model Diet
 
-
     <div class=" border p-3 mt-4">
         <div class=" row pb-2">
             <h1 class="text-primary"> Diet Details</h1>
-            <h1>Details for @Model.Name</h1>
+            <h1>Details for @Model.D_Name</h1>
             <hr />
         </div>
         
@@ -18,40 +17,40 @@
 
 
         <div class="mb-3">
-            <label asp-for="Name"></label>
-            <input asp-for="Name" class="form-control" readonly />
-            <span asp-validation-for="Name" class="text-danger"></span>
+            <label asp-for="D_Name"></label>
+            <input asp-for="D_Name" class="form-control" readonly />
+            <span asp-validation-for="D_Name" class="text-danger"></span>
         </div>
 
         <div class="mb-3">
-            <label asp-for="Pros_1"></label>
-        <input asp-for="Pros_1" class="form-control" readonly />
-            <span asp-validation-for="Pros_1" class="text-danger"></span>
+            <label asp-for="D_Pros_1"></label>
+        <input asp-for="D_Pros_1" class="form-control" readonly />
+            <span asp-validation-for="D_Pros_1" class="text-danger"></span>
         </div>
         <div class="mb-3">
-            <label asp-for="Pros_2"></label>
-        <input asp-for="Pros_2" class="form-control" readonly />
-            <span asp-validation-for="Pros_2" class="text-danger"></span>
+            <label asp-for="D_Pros_2"></label>
+        <input asp-for="D_Pros_2" class="form-control" readonly />
+            <span asp-validation-for="D_Pros_2" class="text-danger"></span>
         </div>
         <div class="mb-3">
-            <label asp-for="Pros_3"></label>
-        <input asp-for="Pros_3" class="form-control" readonly />
-            <span asp-validation-for="Pros_3" class="text-danger"></span>
+            <label asp-for="D_Pros_3"></label>
+        <input asp-for="D_Pros_3" class="form-control" readonly />
+            <span asp-validation-for="D_Pros_3" class="text-danger"></span>
         </div>
         <div class="mb-3">
-            <label asp-for="Cons_1"></label>
-        <input asp-for="Cons_1" class="form-control" readonly />
-            <span asp-validation-for="Cons_1" class="text-danger"></span>
+            <label asp-for="D_Cons_1"></label>
+        <input asp-for="D_Cons_1" class="form-control" readonly />
+            <span asp-validation-for="D_Cons_1" class="text-danger"></span>
         </div>
         <div class="mb-3">
-            <label asp-for="Cons_2"></label>
-        <input asp-for="Cons_2" class="form-control" readonly />
-            <span asp-validation-for="Cons_2" class="text-danger"></span>
+            <label asp-for="D_Cons_2"></label>
+        <input asp-for="D_Cons_2" class="form-control" readonly />
+            <span asp-validation-for="D_Cons_2" class="text-danger"></span>
         </div>
         <div class="mb-3">
-            <label asp-for="Cons_3"></label>
-        <input asp-for="Cons_3" class="form-control" readonly />
-            <span asp-validation-for="Cons_3" class="text-danger"></span>
+            <label asp-for="D_Cons_3"></label>
+        <input asp-for="D_Cons_3" class="form-control" readonly />
+            <span asp-validation-for="D_Cons_3" class="text-danger"></span>
 
         </div>
         <div class="form-group">
