--- a/ExerciseXData/Views/Diet/Index.cshtml
+++ b/ExerciseXData/Views/Diet/Index.cshtml
@@ -33,14 +33,14 @@
             @foreach (var obj in Model)
             {
                 <tr>
-                    <td> @obj.Name</td>
-                    <td> @obj.Description</td>
-                    <td> @obj.Pros_1 </td>
-                    <td> @obj.Pros_2 </td>
-                    <td> @obj.Pros_3</td>
-                    <td> @obj.Cons_1 </td>
-                    <td> @obj.Cons_2 </td>
-                    <td> @obj.Cons_3 </td>
+                    <td> @obj.D_Name</td>
+                    <td> @obj.D_Description</td>
+                    <td> @obj.D_Pros_1 </td>
+                    <td> @obj.D_Pros_2 </td>
+                    <td> @obj.D_Pros_3</td>
+                    <td> @obj.D_Cons_1 </td>
+                    <td> @obj.D_Cons_2 </td>
+                    <td> @obj.D_Cons_3 </td>
 
                     <td>
                         <div class="w-75 btn-group" role="group">
