--- a/ExerciseXData/Views/Exercise/Create.cshtml
+++ b/ExerciseXData/Views/Exercise/Create.cshtml
@@ -8,48 +8,48 @@
             <hr />
         </div>
         <div asp-validation-summary="All"></div> @*Displays all the validation texts*@
-
+        <!--
         <div class="mb-3">
-            <label asp-for="Image"></label>
-            <input asp-for="Image" class="form-control" />
-            <span asp-validation-for="Image" class="text-danger"></span>
+            <label asp-for="C_Image"></label>
+            <input asp-for="C_Image" class="form-control" />
+            <span asp-validation-for="C_Image" class="text-danger"></span>
+        </div>
+        -->
+        <div class="mb-3">
+            <label asp-for="E_Name"></label>
+            <input asp-for="E_Name" class="form-control" />
+            <span asp-validation-for="E_Name" class="text-danger"></span>
         </div>
 
         <div class="mb-3">
-            <label asp-for="Name"></label>
-            <input asp-for="Name" class="form-control" />
-            <span asp-validation-for="Name" class="text-danger"></span>
-        </div>
-
-        <div class="mb-3">
-            <label asp-for="Pros_1"></label>
-            <input asp-for="Pros_1" class="form-control" />
-            <span asp-validation-for="Pros_1" class="text-danger"></span>
+            <label asp-for="E_Pros_1"></label>
+            <input asp-for="E_Pros_1" class="form-control" />
+            <span asp-validation-for="E_Pros_1" class="text-danger"></span>
         </div>
         <div class="mb-3">
-            <label asp-for="Pros_2"></label>
-            <input asp-for="Pros_2" class="form-control" />
-            <span asp-validation-for="Pros_2" class="text-danger"></span>
+            <label asp-for="E_Pros_2"></label>
+            <input asp-for="E_Pros_2" class="form-control" />
+            <span asp-validation-for="E_Pros_2" class="text-danger"></span>
         </div>
         <div class="mb-3">
-            <label asp-for="Pros_3"></label>
-            <input asp-for="Pros_3" class="form-control" />
-            <span asp-validation-for="Pros_3" class="text-danger"></span>
+            <label asp-for="E_Pros_3"></label>
+            <input asp-for="E_Pros_3" class="form-control" />
+            <span asp-validation-for="E_Pros_3" class="text-danger"></span>
         </div>
         <div class="mb-3">
-            <label asp-for="Cons_1"></label>
-            <input asp-for="Cons_1" class="form-control" />
-            <span asp-validation-for="Cons_1" class="text-danger"></span>
+            <label asp-for="E_Cons_1"></label>
+            <input asp-for="E_Cons_1" class="form-control" />
+            <span asp-validation-for="E_Cons_1" class="text-danger"></span>
         </div>
         <div class="mb-3">
-            <label asp-for="Cons_2"></label>
-            <input asp-for="Cons_2" class="form-control" />
-            <span asp-validation-for="Cons_2" class="text-danger"></span>
+            <label asp-for="E_Cons_2"></label>
+            <input asp-for="E_Cons_2" class="form-control" />
+            <span asp-validation-for="E_Cons_2" class="text-danger"></span>
         </div>
         <div class="mb-3">
-            <label asp-for="Cons_3"></label>
-            <input asp-for="Cons_3" class="form-control" />
-            <span asp-validation-for="Cons_3" class="text-danger"></span>
+            <label asp-for="E_Cons_3"></label>
+            <input asp-for="E_Cons_3" class="form-control" />
+            <span asp-validation-for="E_Cons_3" class="text-danger"></span>
         </div>
 
         <button type="submit" class="btn btn-primary" style="width:150px">Create</button>
