--- a/ExerciseXData/Views/Exercise/Delete.cshtml
+++ b/ExerciseXData/Views/Exercise/Delete.cshtml
@@ -16,15 +16,14 @@
         <div class="mb-3">
         <label asp-for="E_Id"></label>
         <input asp-for="E_Id" disabled class="form-control" />
-
         </div>
 
+        <!--
         <div class="mb-3">
-        <label asp-for="E_Image"></label>
-        <input asp-for="E_Image" disabled class="form-control" />
-
+        <label asp-for="C_Image"></label>
+        <input asp-for="C_Image" disabled class="form-control" />
         </div>
-
+        -->
         <div class="mb-3">
             <label asp-for="E_Name"></label>
             <input asp-for="E_Name" disabled class="form-control" />
