--- a/ExerciseXData/Views/Exercise/Edit.cshtml
+++ b/ExerciseXData/Views/Exercise/Edit.cshtml
@@ -16,9 +16,9 @@
             </div>*@
 
             <div class="mb-3">
-                <label asp-for="E_Image"></label>
-                <input asp-for="E_Image" class="form-control" />
-                <span asp-validation-for="E_Image" class="text-danger"></span>
+                <label asp-for="C_Image"></label>
+                <input asp-for="C_Image" class="form-control" />
+                <span asp-validation-for="C_Image" class="text-danger"></span>
             </div>
 
         <div class="mb-3">
