--- a/ExerciseXData/Views/Food/Delete.cshtml
+++ b/ExerciseXData/Views/Food/Delete.cshtml
@@ -11,8 +11,8 @@
         <div asp-validation-summary="All"></div> @*Displays all the validation texts*@
 
         <div class="mb-3">
-            <label asp-for="F_Image"></label>
-            <input asp-for="F_Image" disabled class="form-control" />
+            <label asp-for="F_C_Image"></label>
+            <input asp-for="F_C_Image" disabled class="form-control" />
 
         </div>
 
