--- a/ExerciseXData/Views/Food/Index.cshtml
+++ b/ExerciseXData/Views/Food/Index.cshtml
@@ -19,7 +19,7 @@
         <thead>
             <tr>
                 <th>
-                    Food Image
+                    Food C_Image
                 </th>
                 <th>
                     Food Name
@@ -39,7 +39,7 @@
             {
                 <tr>
                     <td>
-                        @obj.F_Image
+                        @obj.F_C_Image
                     </td>
                     <td>
                         @obj.F_Name
