--- a/ExerciseXData/Views/Category/Create.cshtml
+++ b/ExerciseXData/Views/Category/Create.cshtml
@@ -16,15 +16,15 @@
         </div>*@
 
         <div class="mb-3">
-            <label asp-for="Image"></label>
-            <input asp-for="Image" class="form-control" />
-            <span asp-validation-for="Image" class="text-danger"></span>
+            <label asp-for="C_Image"></label>
+            <input asp-for="C_Image" class="form-control" />
+            <span asp-validation-for="C_Image" class="text-danger"></span>
         </div>
 
         <div class="mb-3">
-            <label asp-for="Name"></label>
-            <input asp-for="Name" class="form-control" />
-            <span asp-validation-for="Name" class="text-danger"></span>
+            <label asp-for="C_Name"></label>
+            <input asp-for="C_Name" class="form-control" />
+            <span asp-validation-for="C_Name" class="text-danger"></span>
         </div>
 
         <button type="submit" class="btn btn-primary" style="width:150px">Create</button>
