--- a/ExerciseXData/Views/Category/Details.cshtml
+++ b/ExerciseXData/Views/Category/Details.cshtml
@@ -4,33 +4,32 @@
     <div class=" border p-3 mt-4">
         <div class=" row pb-2">
             <h1 class="text-primary"> Category Details</h1>
-            <h1>Details for @Model.Name</h1>
+            <h1>Details for @Model.C_Name</h1>
             <hr />
         </div>
         
         <div class = "form-group text-center"></div>
-
-@*        <div class="mb-3">
+        
+        <div class="mb-3">
             <label asp-for="C_Id"></label>
-        <input asp-for="C_Id" class="form-control" readonly />
-        <span asp-validation-for="C_Id" class="text-danger"></span>
-        </div>*@
-
-        <div class="mb-3">
-            <label asp-for="Image"></label>
-        <input asp-for="Image" class="form-control" readonly />
-        <span asp-validation-for="Image" class="text-danger"></span>
+            <input asp-for="C_Id" class="form-control" readonly />
+            <span asp-validation-for="C_Id" class="text-danger"></span>
         </div>
-
+        @*
         <div class="mb-3">
-            <label asp-for="Name"></label>
-        <input asp-for="Name" class="form-control" readonly />
-        <span asp-validation-for="Name" class="text-danger"></span>
+            <label asp-for="C_Image"></label>
+            <input asp-for="C_Image" class="form-control" readonly />
+            <span asp-validation-for="C_Image" class="text-danger"></span>
+        </div>
+        *@
+        <div class="mb-3">
+            <label asp-for="C_Name"></label>
+            <input asp-for="C_Name" class="form-control" readonly />
+            <span asp-validation-for="C_Name" class="text-danger"></span>
         </div>
        
         <div class="form-group">
-        
-        <a class="btn btn-secondary" asp-action="Edit" asp-route-id="@Model.Id" ></a>
+        <a class="btn btn-secondary" asp-action="Edit" asp-route-id="@Model.C_Id" ></a>
         <a class="btn btn-secondary" asp-action="Index" style="width:150px">Back to List</a>
     </div>
 </div>
