--- a/ExerciseXData/Views/Category/Index.cshtml
+++ b/ExerciseXData/Views/Category/Index.cshtml
@@ -29,21 +29,19 @@
             @foreach (var obj in Model)
             {
                 <tr>
-                    @*<td>
-                        @obj.C_Id
-                    </td>*@
-                    <td >@obj.Image</td>
-                    <td>@obj.Name </td>
+                    @*<td>@obj.C_Id</td>*@
+                    @*<td >@obj.C_Image</td>*@
+                    <td>@obj.C_Name </td>
 
                     <td>
                         <div class="w-75 btn-group" role="group">
-                            <a asp-controller="Category" asp-action="Details" asp-route-id="@obj.Id"
+                            <a asp-controller="Category" asp-action="Details" asp-route-id="@obj.C_Id"
                                class="btn btn-primary mx-2"> <i class="bi bi-pencil-square"></i>Details</a>
 
-                            <a asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id"
+                            <a asp-controller="Category" asp-action="Edit" asp-route-id="@obj.C_Id"
                                class="btn btn-primary mx-2"> <i class="bi bi-pencil-square"></i>Edit</a>
 
-                            <a asp-controller="Category" asp-action="Delete" asp-route-id="@obj.Id"
+                            <a asp-controller="Category" asp-action="Delete" asp-route-id="@obj.C_Id"
                                class="btn btn-primary mx-2"> <i class="bi bi-trash-fill"></i>Delete</a>
                         </div>
                     </td>
