--- a/ExerciseXData/Views/Exercise/Index.cshtml
+++ b/ExerciseXData/Views/Exercise/Index.cshtml
@@ -19,7 +19,7 @@
                @*<th>
                     Exercise Category
                 </th>*@
-                <th> Image </th>
+                <th> C_Image </th>
                 <th> Exercise Name </th>
                 <th> Pros 1 </th>
                 <th> Pros 2 </th>
@@ -35,7 +35,7 @@
             {
                 <tr>
                     @*<td>@obj.C_Id </td>*@
-                    <td> @obj.E_Image</td>
+                    <td> @obj.C_Image</td>
                     <td> @obj.E_Name </td>
                     <td> @obj.E_Pros_1 </td>
                     <td> @obj.E_Pros_2 </td>
