--- a/ExerciseXData/Views/Food/Create.cshtml
+++ b/ExerciseXData/Views/Food/Create.cshtml
@@ -9,9 +9,9 @@
         <div asp-validation-summary="All"></div> @*Displays all the validation texts*@
         
         <div class="mb-3">
-            <label asp-for="F_Image"></label>
-            <input asp-for="F_Image" class="form-control" />
-            <span asp-validation-for="F_Image" class="text-danger"></span>
+            <label asp-for="F_C_Image"></label>
+            <input asp-for="F_C_Image" class="form-control" />
+            <span asp-validation-for="F_C_Image" class="text-danger"></span>
         </div>
 
         <div class="mb-3">
