--- a/ExerciseXData/Views/Food/Details.cshtml
+++ b/ExerciseXData/Views/Food/Details.cshtml
@@ -13,9 +13,9 @@
 
 
         <div class="mb-3">
-        <label asp-for="F_Image"></label>
-        <input asp-for="F_Image" class="form-control" readonly />
-        <span asp-validation-for="F_Image" class="text-danger"></span>
+        <label asp-for="F_C_Image"></label>
+        <input asp-for="F_C_Image" class="form-control" readonly />
+        <span asp-validation-for="F_C_Image" class="text-danger"></span>
         </div>
 
         <div class="mb-3">
