Updated all models classes and Views

--- a/ExerciseXData/Views/Diet/Delete.cshtml
+++ b/ExerciseXData/Views/Diet/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Diet
+﻿@model Diets
 
 <form method="post" asp-action="DeletePOST">
     @*DeletePOST here can change name with the CategoryController POST method*@
