--- a/ExerciseXData/Views/Exercise/Index.cshtml
+++ b/ExerciseXData/Views/Exercise/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Exercise>
+﻿@model IEnumerable<Exercises>
 @{
     ViewData["Title"] = "List of Exercises";
 }
@@ -16,10 +16,8 @@
     <table class="table table-bordered table-striped" style="width:100%">
         <thead>
             <tr>
-               @*<th>
-                    Exercise Category
-                </th>*@
-                <th> C_Image </th>
+               <th>Exercise Category</th>
+                <th> Eexercise Image </th>
                 <th> Exercise Name </th>
                 <th> Pros 1 </th>
                 <th> Pros 2 </th>
@@ -35,7 +33,7 @@
             {
                 <tr>
                     @*<td>@obj.C_Id </td>*@
-                    <td> @obj.C_Image</td>
+                    <td> @obj.E_Image</td>
                     <td> @obj.E_Name </td>
                     <td> @obj.E_Pros_1 </td>
                     <td> @obj.E_Pros_2 </td>
