--- a/ExerciseXData/Views/Category/Delete.cshtml
+++ b/ExerciseXData/Views/Category/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Category
+﻿@model Categories
 
 <form method="post" asp-action="Delete">
     @*DeletePOST here can change name with the CategoryController POST method*@
