--- a/ExerciseXData/Views/Exercise/Delete.cshtml
+++ b/ExerciseXData/Views/Exercise/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Exercise
+﻿@model Exercises
 
 <form method="post" asp-action="Delete">
     @*DeletePOST here can change name with the CategoryController POST method*@
