--- a/ExerciseXData/Views/Exercise/Details.cshtml
+++ b/ExerciseXData/Views/Exercise/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Exercise
+﻿@model Exercises
 
 
     <div class=" border p-3 mt-4">
@@ -17,9 +17,9 @@
         </div>*@
 
         <div class="mb-3">
-        <label asp-for="C_Image"></label>
-        <input asp-for="C_Image" class="form-control" readonly />
-        <span asp-validation-for="C_Image" class="text-danger"></span>
+        <label asp-for="E_Image"></label>
+        <input asp-for="E_Image" class="form-control" readonly />
+        <span asp-validation-for="E_Image" class="text-danger"></span>
         </div>
 
         <div class="mb-3">
