--- a/ExerciseXData/Views/Food/Details.cshtml
+++ b/ExerciseXData/Views/Food/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Food
+﻿@model Foods
 
 
     <div class=" border p-3 mt-4">
@@ -13,9 +13,9 @@
 
 
         <div class="mb-3">
-        <label asp-for="F_C_Image"></label>
-        <input asp-for="F_C_Image" class="form-control" readonly />
-        <span asp-validation-for="F_C_Image" class="text-danger"></span>
+        <label asp-for="F_Image"></label>
+        <input asp-for="F_Image" class="form-control" readonly />
+        <span asp-validation-for="F_Image" class="text-danger"></span>
         </div>
 
         <div class="mb-3">
@@ -25,9 +25,9 @@
         </div>
 
         <div class="mb-3">
-            <label asp-for="F_Food_Calories"></label>
-        <input asp-for="F_Food_Calories" class="form-control" readonly />
-        <span asp-validation-for="F_Food_Calories" class="text-danger"></span>
+            <label asp-for="F_Calories"></label>
+        <input asp-for="F_Calories" class="form-control" readonly />
+        <span asp-validation-for="F_Calories" class="text-danger"></span>
         </div>
     @*<div class="mb-3">
     <label asp-for="F_Modify_Date"></label>
