--- a/ExerciseXData/Views/Food/Edit.cshtml
+++ b/ExerciseXData/Views/Food/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Food
+﻿@model Foods
 
 <form method="post">
     <div class=" border p-3 mt-4">
@@ -9,9 +9,9 @@
         <div asp-validation-summary="All"></div> @*Displays all the validation texts*@
 
         <div class="mb-3">
-            <label asp-for="F_C_Image"></label>
-            <input asp-for="F_C_Image" class="form-control" />
-            <span asp-validation-for="F_C_Image" class="text-danger"></span>
+            <label asp-for="F_Image"></label>
+            <input asp-for="F_Image" class="form-control" />
+            <span asp-validation-for="F_Image" class="text-danger"></span>
         </div>
 
         <div class="mb-3">
@@ -21,9 +21,9 @@
         </div>
 
         <div class="mb-3">
-            <label asp-for="F_Food_Calories"></label>
-            <input asp-for="F_Food_Calories" class="form-control" />
-            <span asp-validation-for="F_Food_Calories" class="text-danger"></span>
+            <label asp-for="F_Calories"></label>
+            <input asp-for="F_Calories" class="form-control" />
+            <span asp-validation-for="F_Calories" class="text-danger"></span>
         </div>
 
         @*<div class="mb-3">
