--- a/ExerciseXData/Views/Food/Index.cshtml
+++ b/ExerciseXData/Views/Food/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Food>
+﻿@model IEnumerable<Foods>
 @{
     ViewData["Title"] = "List of Foods";
 }
@@ -38,18 +38,10 @@
             @foreach (var obj in Model)
             {
                 <tr>
-                    <td>
-                        @obj.F_C_Image
-                    </td>
-                    <td>
-                        @obj.F_Name
-                    </td>
-                    <td>
-                        @obj.F_Food_Calories
-                    </td>
-                    @* <td>
-                @obj.F_Modify_Date
-                </td>*@
+                    <td>@obj.F_Image</td>
+                    <td>@obj.F_Name</td>
+                    <td>@obj.F_Calories</td>
+                    <td>@obj.F_Modified_Date</td>
 
                     <td>
                         <div class="w-75 btn-group" role="group">
