--- a/ExerciseXData/Views/Category/Index.cshtml
+++ b/ExerciseXData/Views/Category/Index.cshtml
@@ -16,9 +16,7 @@
     <table class="table table-bordered table-striped" style="width:100%">
         <thead>
             <tr>
-               @*<th>
-                    Category ID
-                </th>*@
+               <th>Category ID</th>
                 <th>Category Image</th>
                 <th>Category Name </th>
                 
@@ -29,8 +27,8 @@
             @foreach (var obj in Model)
             {
                 <tr>
-                    @*<td>@obj.C_Id</td>*@
-                    @*<td >@obj.C_Image</td>*@
+                    <td>@obj.C_Id</td>
+                    <td >@obj.C_Image</td>
                     <td>@obj.C_Name </td>
 
                     <td>
