--- a/ExerciseXData/Views/Exercise/Index.cshtml
+++ b/ExerciseXData/Views/Exercise/Index.cshtml
@@ -25,6 +25,7 @@
                 <th> Cons 1 </th>
                 <th> Cons 2 </th>
                 <th> Cons 3 </th>
+                <th> Modified Date</th>
             </tr>
         </thead>
 
@@ -41,6 +42,7 @@
                     <td> @obj.E_Cons_1 </td>
                     <td> @obj.E_Cons_2 </td>
                     <td> @obj.E_Cons_3</td>
+                    <td> @obj.E_Modified_Date</td>
 
                     <td>
                         <div class="w-75 btn-group" role="group">
