--- a/ExerciseXData/Views/Food/Index.cshtml
+++ b/ExerciseXData/Views/Food/Index.cshtml
@@ -18,18 +18,10 @@
     <table class="table table-bordered table-striped" style="width:100%">
         <thead>
             <tr>
-                <th>
-                    Food C_Image
-                </th>
-                <th>
-                    Food Name
-                </th>
-                <th>
-                    Food Calorie in kcal (per 100 grams)
-                </th>
-                @*<th>
-                Modify Date
-                </th>*@
+                <th>Food C_Image</th>
+                <th>Food Name </th>
+                <th>Food Calorie in kcal</th>
+                <th>Modified Date </th>
 
             </tr>
         </thead>
