--- a/ExerciseXData/Views/Category/Create.cshtml
+++ b/ExerciseXData/Views/Category/Create.cshtml
@@ -27,6 +27,13 @@
             <span asp-validation-for="C_Name" class="text-danger"></span>
         </div>
 
+        <div class="mb-3">
+            <label asp-for="C_Modified_Date"></label>
+            <input asp-for="C_Modified_Date" class="form-control" />
+            <span asp-validation-for="C_Modified_Date" class="text-danger"></span>
+        </div>
+
+
         <button type="submit" class="btn btn-primary" style="width:150px">Create</button>
         <a asp-controller="Category" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
     </div>
