--- a/ExerciseXData/Views/Category/Details.cshtml
+++ b/ExerciseXData/Views/Category/Details.cshtml
@@ -15,19 +15,23 @@
             <input asp-for="C_Id" class="form-control" readonly />
             <span asp-validation-for="C_Id" class="text-danger"></span>
         </div>
-        @*
+        
         <div class="mb-3">
             <label asp-for="C_Image"></label>
             <input asp-for="C_Image" class="form-control" readonly />
             <span asp-validation-for="C_Image" class="text-danger"></span>
         </div>
-        *@
+        
         <div class="mb-3">
             <label asp-for="C_Name"></label>
             <input asp-for="C_Name" class="form-control" readonly />
             <span asp-validation-for="C_Name" class="text-danger"></span>
         </div>
-       
+    <div class="mb-3">
+        <label asp-for="C_Modified_Date"></label>
+        <input asp-for="C_Modified_Date" class="form-control" />
+        <span asp-validation-for="C_Modified_Date" class="text-danger"></span>
+    </div>
         <div class="form-group">
         <a class="btn btn-secondary" asp-action="Edit" asp-route-id="@Model.C_Id" ></a>
         <a class="btn btn-secondary" asp-action="Index" style="width:150px">Back to List</a>
