--- a/ExerciseXData/Views/Diet/Create.cshtml
+++ b/ExerciseXData/Views/Diet/Create.cshtml
@@ -48,6 +48,12 @@
             <input asp-for="D_Cons_3" class="form-control" />
             <span asp-validation-for="D_Cons_3" class="text-danger"></span>
         </div>
+
+        <div class="mb-3">
+            <label asp-for="D_Modified_Date"></label>
+            <input asp-for="D_Modified_Date" class="form-control" />
+            <span asp-validation-for="D_Modified_Date" class="text-danger"></span>
+        </div>
         <button type="submit" class="btn btn-primary" style="width:150px">Create</button>
         <a asp-controller="Diet" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
     </div>
