--- a/ExerciseXData/Views/Diet/Delete.cshtml
+++ b/ExerciseXData/Views/Diet/Delete.cshtml
@@ -57,6 +57,13 @@
             <input asp-for="D_Cons_3" disabled class="form-control" />
 
         </div>
+
+        <div class="mb-3">
+            <label asp-for="D_Modified_Date"></label>
+            <input asp-for="D_Modified_Date" class="form-control" />
+            <span asp-validation-for="D_Modified_Date" class="text-danger"></span>
+        </div>
+
         <button type="submit" class="btn btn-danger" style="width:150px">Delete</button>
         <a asp-controller="Exercise" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
     </div>
