--- a/ExerciseXData/Views/Food/Edit.cshtml
+++ b/ExerciseXData/Views/Food/Edit.cshtml
@@ -26,11 +26,11 @@
             <span asp-validation-for="F_Calories" class="text-danger"></span>
         </div>
 
-        @*<div class="mb-3">
-            <label asp-for="F_Modify_Date"></label>
-            <input asp-for="F_Modify_Date" class="form-control" />
-            <span asp-validation-for="F_Modify_Date" class="text-danger"></span>
-        </div>*@
+        <div class="mb-3">
+            <label asp-for="F_Modified_Date"></label>
+            <input asp-for="F_Modified_Date" class="form-control" />
+            <span asp-validation-for="F_Modified_Date" class="text-danger"></span>
+        </div>
         
         <button type="submit" class="btn btn-primary" style="width:150px">Update</button>
         <a asp-controller="Food" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
