--- a/ExerciseXData/Views/Diets/Create.cshtml
+++ b/ExerciseXData/Views/Diets/Create.cshtml
@@ -55,7 +55,7 @@
             <span asp-validation-for="D_Modified_Date" class="text-danger"></span>
         </div>
         <button type="submit" class="btn btn-primary" style="width:150px">Create</button>
-        <a asp-controller="Diet" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
+        <a asp-controller="Diets" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
     </div>
 </form>
 
