--- a/ExerciseXData/Views/Exercises/Details.cshtml
+++ b/ExerciseXData/Views/Exercises/Details.cshtml
@@ -10,11 +10,11 @@
         
         <div class = "form-group text-center"></div>
 
-        @*<div class="mb-3">
+        <div class="mb-3">
         <label asp-for="C_Id"></label>
         <input asp-for="C_Id" class="form-control" readonly />
         <span asp-validation-for="C_Id" class="text-danger"></span>
-        </div>*@
+        </div>
 
         <div class="mb-3">
         <label asp-for="E_Image"></label>
