--- a/ExerciseXData/Views/Home/About.cshtml
+++ b/ExerciseXData/Views/Home/About.cshtml
@@ -4,7 +4,7 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome stranger!</h1>
-    <h2>Welcome to Exercise X Data.</h2>
+    <h2>Welcome to Exercises X Data.</h2>
     <br />
     <br />
     <p>Please login or register to view more features of the web app.</p>
