--- a/ExerciseXData/Views/Diets/Delete.cshtml
+++ b/ExerciseXData/Views/Diets/Delete.cshtml
@@ -65,7 +65,7 @@
         </div>
 
         <button type="submit" class="btn btn-danger" style="width:150px">Delete</button>
-        <a asp-controller="Exercise" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
+        <a asp-controller="Diets" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
     </div>
 </form>
 
