--- a/ExerciseXData/Views/Diets/Edit.cshtml
+++ b/ExerciseXData/Views/Diets/Edit.cshtml
@@ -59,7 +59,7 @@
         </div>
 
         <button type="submit" class="btn btn-primary" style="width:150px">Update</button>
-        <a asp-controller="Diet" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
+        <a asp-controller="Diets" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
     </div>
 </form>
 
