--- a/ExerciseXData/Views/Diets/Index.cshtml
+++ b/ExerciseXData/Views/Diets/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<Diets>
+﻿@using ExerciseXData.Models;
+@model IEnumerable<Diets>
 @{
     ViewData["Title"] = "List of Diets";
 }
@@ -11,7 +12,7 @@
             <h1>Diet Lists</h1>
         </div>
         <div class=" col-6 text-end">
-            <a asp-controller="Diet" asp-action="Create" class="btn btn-primary">Create New Diet</a>
+            <a asp-controller="Diets" asp-action="Create" class="btn btn-primary">Create New Diet</a>
         </div>
     </div>
 
@@ -42,17 +43,17 @@
                     <td> @obj.D_Cons_1 </td>
                     <td> @obj.D_Cons_2 </td>
                     <td> @obj.D_Cons_3 </td>
-                    <td>@obj.D_Modified_Date</td>
+                    <td> @obj.D_Modified_Date</td>
 
                     <td>
                         <div class="w-75 btn-group" role="group">
-                            <a asp-controller="Diet" asp-action="Details" asp-route-id="@obj.D_Id"
+                            <a asp-controller="Diets" asp-action="Details" asp-route-id="@obj.D_Id"
                                class="btn btn-primary mx-2"> <i class="bi bi-pencil-square"></i>Details</a>
 
-                            <a asp-controller="Diet" asp-action="Edit" asp-route-id="@obj.D_Id"
+                            <a asp-controller="Diets" asp-action="Edit" asp-route-id="@obj.D_Id"
                                class="btn btn-primary mx-2"> <i class="bi bi-pencil-square"></i>Edit</a>
 
-                            <a asp-controller="Diet" asp-action="Delete" asp-route-id="@obj.D_Id"
+                            <a asp-controller="Diets" asp-action="Delete" asp-route-id="@obj.D_Id"
                                class="btn btn-primary mx-2"> <i class="bi bi-trash-fill"></i>Delete</a>
                         </div>
                     </td>
