--- a/ExerciseXData/Views/Food/Details.cshtml
+++ b/ExerciseXData/Views/Food/Details.cshtml
@@ -3,7 +3,7 @@
 
     <div class=" border p-3 mt-4">
         <div class=" row pb-2">
-            <h1 class="text-primary"> Exercise Details</h1>
+            <h1 class="text-primary"> Exercises Details</h1>
             <h1>Details for @Model.F_Name</h1>
             <hr />
         </div>
